added damage type